--- a/Code/Dataset_Utils.ipynb
+++ b/Code/Dataset_Utils.ipynb
@@ -263,8 +263,8 @@
     "        ax.set_yticklabels([])\n",
     "\n",
     "        for row in range(num_rows):\n",
-    "            x = sample_batch['image'][row]\n",
-    "            y = sample_batch['label'][row]\n",
+    "            x = batch['image'][row]\n",
+    "            y = batch['label'][row]\n",
     "            \n",
     "            # modalities\n",
     "            indices = [col_idx + (5*row) for col_idx in range(4)]\n",
