Added heatmat visualization

--- a/Code/Data_Extraction.ipynb
+++ b/Code/Data_Extraction.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8c703557",
    "metadata": {
     "scrolled": true
@@ -72,9 +72,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root_dir:    /media/z/Ubuntu-Storage/BT_Segmentation_Project/Code\n",
-      "parent_dir:  /media/z/Ubuntu-Storage/BT_Segmentation_Project\n",
-      "dataset_dir: /media/z/Ubuntu-Storage/BT_Segmentation_Project/Task01_BrainTumour\n",
+      "root_dir:    C:\\Users\\adria\\Deep_Learning_Project\\Code\n",
+      "parent_dir:  C:\\Users\\adria\\Deep_Learning_Project\n",
+      "dataset_dir: C:\\Users\\adria\\Deep_Learning_Project\\Task01_BrainTumour\n",
       "data not extracted yet.\n",
       " -> creating new extracted dir.\n"
      ]
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "689dceef",
    "metadata": {
     "scrolled": true
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "49451ce8",
    "metadata": {},
    "outputs": [
@@ -212,6 +212,14 @@
     "        np.save(extracted_img_path, img)\n",
     "    print('finished extracting test files.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e304ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -230,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
