Implemented the 3d version of the mazeusbuda implementation. Model architecture is extremly simplefied since the training time is huge with only cpu. Model prediction is therefore pretty bad.

--- a/Code/Data_Extraction.ipynb
+++ b/Code/Data_Extraction.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "8e82eb37",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -32,7 +36,11 @@
   {
    "cell_type": "markdown",
    "id": "6662bb57",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# File structure:\n",
     "```\n",
@@ -55,7 +63,11 @@
   {
    "cell_type": "markdown",
    "id": "9d63e8e2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Extracting files"
    ]
@@ -65,7 +77,10 @@
    "execution_count": 2,
    "id": "8c703557",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -114,7 +129,10 @@
    "execution_count": 3,
    "id": "689dceef",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -156,7 +174,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "49451ce8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -217,7 +239,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "79e304ff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
