--- a/Code/cropping_images.ipynb
+++ b/Code/cropping_images.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6a39b9b2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import SimpleITK as sitk\n",
@@ -19,7 +23,11 @@
   {
    "cell_type": "markdown",
    "id": "48f70142",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Images already need to be extracted for this script to work  \n",
     "Only crops the images within the Tr directory since the Tl directory doesn´t have labels"
@@ -29,7 +37,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "c497cde3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "extracted_directory = '../Task01_BrainTumour/extracted/'\n",
@@ -43,7 +55,11 @@
   {
    "cell_type": "markdown",
    "id": "b2a70053",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Crop and save the images:"
    ]
@@ -52,7 +68,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "0728f476",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
