2D seems promising, since it only needs a little of the GPU memory and already delivers promising results

--- a/Code/visualize_heatmap.ipynb
+++ b/Code/visualize_heatmap.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "452d286f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import SimpleITK as sitk\n",
@@ -19,7 +23,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7b174f59",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "image_directory = '../Task01_BrainTumour/extracted/imagesTr/%i.npy'\n",
@@ -32,7 +40,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "cb9bc8bf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def add_values_to_heatmap(from_image, to_image):\n",
@@ -50,7 +62,11 @@
   {
    "cell_type": "markdown",
    "id": "e76cadd8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Add the images in batches of 100:"
    ]
@@ -59,7 +75,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "ddf3e547",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "heatmap_img = np.zeros((240, 240))\n",
@@ -70,7 +90,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "e84b3824",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "heatmap_img += add_values_to_heatmap(100, 200)"
@@ -80,7 +104,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "15c8f52d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "heatmap_img += add_values_to_heatmap(200, 300)"
@@ -90,7 +118,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "7e3c10ba",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "heatmap_img += add_values_to_heatmap(300, 400)"
@@ -100,7 +132,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "08beb641",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "heatmap_img += add_values_to_heatmap(400, 484)"
@@ -110,7 +146,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "fbd671f9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -143,7 +183,11 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "f0ee1461",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -189,7 +233,11 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "ea3d4723",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -222,7 +270,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eb08956e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
