--- a/Code/Dataset_Utils.ipynb
+++ b/Code/Dataset_Utils.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "08a00a3f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Ressources\n",
     "\n",
@@ -25,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "8c22875b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -54,7 +62,11 @@
   {
    "cell_type": "markdown",
    "id": "6e8f7533",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Train and Test Dataset classes"
    ]
@@ -63,7 +75,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "f297470e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class BraTS_TrainingDataset():\n",
@@ -127,7 +143,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f61dc54e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class BraTS_TestDataset():\n",
@@ -191,7 +211,10 @@
    "execution_count": 18,
    "id": "d96e4d70",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -217,7 +240,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "eec765e2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -243,7 +270,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "484f9b5e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# note: you can try 2 workers or more\n",
@@ -258,7 +289,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "ed18966b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -282,7 +317,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "f8a65054",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_batch(batch, num_rows=2, height=70):\n",
@@ -317,7 +356,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "2bf197db",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -350,7 +393,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a2185b2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
