Added Evaluation with Dice

--- a/Code/First_Model_UNet.ipynb
+++ b/Code/First_Model_UNet.ipynb
@@ -64,7 +64,8 @@
     "\n",
     "from unet_short import UNet\n",
     "from mateusbuda_utils import dsc, dsc_per_volume\n",
-    "from mateusbuda_loss import DiceLoss"
+    "from mateusbuda_loss import DiceLoss\n",
+    "device = 'cuda:0'"
    ]
   },
   {
@@ -80,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1d5e83664d0>"
+       "<torch._C.Generator at 0x2329a8774d0>"
       ]
      },
      "execution_count": 2,
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2f1591cd",
    "metadata": {},
    "outputs": [],
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4bd5aa85",
    "metadata": {},
    "outputs": [],
@@ -557,7 +558,7 @@
     "loaders = {\"train\": trainloader, \"valid\": testloader}\n",
     "unet = UNet(in_channels=4, out_channels=4, init_features=32)\n",
     "unet.to(device)\n",
-    "entropy_loss = DiceLoss()\n",
+    "dice_loss = DiceLoss()\n",
     "best_validation_dsc = 0.0\n",
     "optimizer = optim.Adam(unet.parameters(), lr=0.0001)\n",
     "loss_train = []\n",
@@ -590,7 +591,7 @@
     "                with torch.set_grad_enabled(phase == \"train\"):\n",
     "                    y_pred = unet(x)\n",
     "                    y_true = y_true[:, 0, :, :].type(torch.LongTensor).to(device)\n",
-    "                    loss = entropy_loss(y_pred, y_true)\n",
+    "                    loss = dice_loss(y_pred, y_true)\n",
     "                    if phase == \"train\":\n",
     "                        loss_train.append(loss.item())\n",
     "                        loss.backward()\n",
@@ -601,7 +602,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "id": "e9fd3512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UNet(\n",
+       "  (encoder1): Sequential(\n",
+       "    (enc1conv1): Conv2d(4, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc1norm1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc1relu1): ReLU(inplace=True)\n",
+       "    (enc1conv2): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc1norm2): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc1relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (encoder2): Sequential(\n",
+       "    (enc2conv1): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc2norm1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc2relu1): ReLU(inplace=True)\n",
+       "    (enc2conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc2norm2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc2relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (encoder3): Sequential(\n",
+       "    (enc3conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc3norm1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc3relu1): ReLU(inplace=True)\n",
+       "    (enc3conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc3norm2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc3relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (pool3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (encoder4): Sequential(\n",
+       "    (enc4conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc4norm1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc4relu1): ReLU(inplace=True)\n",
+       "    (enc4conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (enc4norm2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (enc4relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (pool4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (bottleneck): Sequential(\n",
+       "    (bottleneckconv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (bottlenecknorm1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (bottleneckrelu1): ReLU(inplace=True)\n",
+       "    (bottleneckconv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (bottlenecknorm2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (bottleneckrelu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (upconv4): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (decoder4): Sequential(\n",
+       "    (dec4conv1): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec4norm1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec4relu1): ReLU(inplace=True)\n",
+       "    (dec4conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec4norm2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec4relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (upconv3): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (decoder3): Sequential(\n",
+       "    (dec3conv1): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec3norm1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec3relu1): ReLU(inplace=True)\n",
+       "    (dec3conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec3norm2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec3relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (upconv2): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (decoder2): Sequential(\n",
+       "    (dec2conv1): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec2norm1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec2relu1): ReLU(inplace=True)\n",
+       "    (dec2conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec2norm2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec2relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (upconv1): ConvTranspose2d(64, 32, kernel_size=(2, 2), stride=(2, 2))\n",
+       "  (decoder1): Sequential(\n",
+       "    (dec1conv1): Conv2d(64, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec1norm1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec1relu1): ReLU(inplace=True)\n",
+       "    (dec1conv2): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    (dec1norm2): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (dec1relu2): ReLU(inplace=True)\n",
+       "  )\n",
+       "  (conv): Conv2d(32, 4, kernel_size=(1, 1), stride=(1, 1))\n",
+       ")"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unet_loaded = UNet(in_channels=4, out_channels=4, init_features=32)\n",
+    "unet_loaded.load_state_dict(torch.load('../Saved_Models/model_weights_4'))\n",
+    "unet_loaded.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f2de7e",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f40a69",
+   "metadata": {},
+   "source": [
+    "mean of the % of the intercept of all classes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "60d4fee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dice_Metric(nn.Module):\n",
+    "    def __init__(self, weight=None, size_average=True):\n",
+    "        super(Dice_Metric, self).__init__()\n",
+    "\n",
+    "    def forward(self, inputs, targets):\n",
+    "        \n",
+    "        loss_count = []\n",
+    "        for i in range(len(inputs[0])):\n",
+    "            current_class = targets.clone()\n",
+    "            current_class[current_class!=i] = 0\n",
+    "            current_class[current_class==i] = 1\n",
+    "            loss_count.append(1-dice_loss_one_image(inputs[:, i], current_class).cpu().item())\n",
+    "        \n",
+    "        return loss_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ac0d9990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Background: 0.999998, edema: 0.531586, non-enhancing tumor: 0.459354, enhancing tumor: 0.612728 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluation\n",
+    "dice_loss = Dice_Metric()\n",
+    "loss_test = []\n",
+    "loaders = {\"train\": trainloader, \"valid\": testloader}\n",
+    "for i, data in enumerate(loaders['valid']):\n",
+    "    x_whole = data['image']\n",
+    "    y_true_whole = data['label']\n",
+    "    for i in range(len(x_whole[0, 0])):\n",
+    "        x, y_true = x_whole[:, :, i, :, :].to(device), y_true_whole[:, :, i, :, :].to(device)\n",
+    "        with torch.set_grad_enabled(False):\n",
+    "            y_pred = unet_loaded(x)\n",
+    "            y_true = y_true[:, 0, :, :].type(torch.LongTensor).to(device)\n",
+    "            loss = dice_loss(y_pred, y_true)\n",
+    "            loss_test.append(loss)\n",
+    "background_loss = np.mean([x[0] for x in loss_test])\n",
+    "edema_loss = np.mean([x[1] for x in loss_test])\n",
+    "non_enhance_loss = np.mean([x[2] for x in loss_test])\n",
+    "enhance_loss = np.mean([x[3] for x in loss_test])\n",
+    "print('Background: %f, edema: %f, non-enhancing tumor: %f, enhancing tumor: %f '% (background_loss, edema_loss, non_enhance_loss, enhance_loss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "003b4772",
    "metadata": {
     "pycharm": {
@@ -619,9 +800,6 @@
     }
    ],
    "source": [
-    "unet_loaded = UNet(in_channels=4, out_channels=4, init_features=32)\n",
-    "unet_loaded.load_state_dict(torch.load('../Saved_Models/model_weights_4'))\n",
-    "unet_loaded.to(device)\n",
     "batch_slices = sample_batch['image']\n",
     "batch_slices = batch_slices[:, :, 70, :, :].to(device)\n",
     "output = unet_loaded(batch_slices)\n",
@@ -632,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "1c97890b",
    "metadata": {
     "pycharm": {
@@ -643,10 +821,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d5b85e1b80>"
+       "<matplotlib.image.AxesImage at 0x23328615ac0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "d0f1aced",
    "metadata": {
     "pycharm": {
@@ -680,10 +858,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d5a7b00a90>"
+       "<matplotlib.image.AxesImage at 0x2332178e640>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
