--- a/Code/cropping_images.ipynb
+++ b/Code/cropping_images.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "6a39b9b2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import SimpleITK as sitk\n",
@@ -19,7 +23,11 @@
   {
    "cell_type": "markdown",
    "id": "48f70142",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Images already need to be extracted for this script to work  \n",
     "Only crops the images within the Tr directory since the Tl directory doesn´t have labels"
@@ -27,9 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c497cde3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "extracted_directory = '../Task01_BrainTumour/extracted/'\n",
@@ -43,16 +55,24 @@
   {
    "cell_type": "markdown",
    "id": "b2a70053",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Crop and save the images:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0728f476",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -72,8 +92,8 @@
     "\n",
     "for i in range(484):\n",
     "    current_image, current_label = get_image_and_target(i)\n",
-    "    np.save(cropped_directory + image_directory % i, current_image[:, :, 19:210, 38:199])\n",
-    "    np.save(cropped_directory + label_directory % i, current_label[:, 19:210, 38:199])\n",
+    "    np.save(cropped_directory + image_directory % i, current_image[:, :, 19:211, 19:211])\n",
+    "    np.save(cropped_directory + label_directory % i, current_label[:, 19:211, 19:211])\n",
     "    print(f'cropping images: {i}/483', end=\"\\r\")"
    ]
   }
@@ -94,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
